<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="11dp"
    android:animateLayoutChanges="true"
    tools:context=".activity.Options">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="17dp"
        android:gravity="center"
        android:text="welcome sheriMello"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/center"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:background="#00000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="11dp"
        app:cardCornerRadius="11dp"
        app:cardElevation="7dp"
        app:layout_constraintBottom_toBottomOf="@+id/center"
        app:layout_constraintEnd_toStartOf="@+id/center"
        app:layout_constraintHeight_percent=".17"
        app:layout_constraintWidth_percent=".4">

        <TextView
            android:id="@+id/text_see_all_posts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/see_nall_nposts"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="11dp"
        app:cardCornerRadius="11dp"
        app:cardElevation="7dp"
        app:layout_constraintBottom_toBottomOf="@+id/center"
        app:layout_constraintHeight_percent=".17"
        app:layout_constraintStart_toEndOf="@+id/center"
        app:layout_constraintWidth_percent=".4">

        <TextView
            android:id="@+id/text_see_users_posts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/see_users_nposts"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="11dp"
        app:cardCornerRadius="11dp"
        app:cardElevation="7dp"
        app:layout_constraintEnd_toStartOf="@+id/center"
        app:layout_constraintHeight_percent=".17"
        app:layout_constraintTop_toBottomOf="@+id/center"
        app:layout_constraintWidth_percent=".4">

        <TextView
            android:id="@+id/text_add_post"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/add_post"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="11dp"
        app:cardCornerRadius="11dp"
        app:cardElevation="7dp"
        app:layout_constraintHeight_percent=".17"
        app:layout_constraintStart_toEndOf="@+id/center"
        app:layout_constraintTop_toBottomOf="@+id/center"
        app:layout_constraintWidth_percent=".4">

        <TextView
            android:id="@+id/text_delete_post"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/delete_post"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>